overflow fixed

--- a/sba-client/src/app/content/content.component.scss
+++ b/sba-client/src/app/content/content.component.scss
@@ -25,14 +25,17 @@
     }
     @media(max-width: $breakpointD) {
         width: 100vw;
+        height: 100vh; 
+        border-radius: 0;
+        transition: 0s;
     }
     @media(max-height: $breakpointD) {
         height: 100vh; 
     }
-    @media(max-height: $breakpointD) and (max-width: $breakpointD) { 
-        transition: 0s;
-        border-radius: 0;
-    }
+    // @media(max-height: $breakpointD) and (max-width: $breakpointD) { 
+    //     transition: 0s;
+    //     border-radius: 0;
+    // }
 
     .inner-content {
         box-sizing: border-box;
@@ -55,7 +58,7 @@
         background-color: $orange;
         border-radius: $border-radius $border-radius 0 0;
 
-        @media(max-height: $breakpointD) and (max-width: $breakpointD) { 
+        @media(max-width: $breakpointD) { 
             border-radius: 0;
         }
 
@@ -108,7 +111,7 @@
         height: 100%;
         overflow: auto;
         background-color: $white;
-        line-height: 22px;
+        line-height: 26px;
         box-sizing: border-box;
         padding: 16px 20px;
         cursor: text;
@@ -129,7 +132,7 @@
         border-radius: 0 0 $border-radius $border-radius;
 
        
-        @media(max-height: $breakpointD) and (max-width: $breakpointD) { 
+        @media(max-width: $breakpointD) { 
             border-radius: 0;
         }
 
@@ -140,6 +143,11 @@
             color: $white;
             font-weight: 600;
             cursor: default;
+
+            // @media(max-width: $breakpointD) {
+            //     text-align: center;
+            //     max-width: 120px;
+            // }
         }
 
         .button-container {
@@ -147,6 +155,8 @@
             justify-content: space-between;
             height: 100%;
             width: 220px;
+            min-width: 205px;
+            
 
             .button-wrap {
                 @extend .vertical-align;
@@ -161,7 +171,7 @@
     animation-fill-mode: forwards;
     animation-duration: 1.25s; 
     transition: .75s; 
-    @media(max-height: $breakpointD) and (max-width: $breakpointD) { 
+    @media(max-width: $breakpointD) { 
         transition: 0s;
     }
 }
