--- a/sba-client/src/app/suggestion/suggestion.component.scss
+++ b/sba-client/src/app/suggestion/suggestion.component.scss
@@ -7,10 +7,11 @@
     
         .misspelling{
             background-color: $yellow;
-            padding: 1px 2px;
+            padding: 0 2px;
             margin: 0 1px; 
             cursor: pointer;
             z-index: 1;
+            height: 24px; 
         }
 
         .dropdown-closed {
@@ -19,7 +20,7 @@
 
         .dropdown-row {
             width: 220px;
-            height: 28px;
+            height: 26px;
             background-color: $white; 
             box-sizing: border-box;
             padding: 0 10px; 
@@ -30,7 +31,17 @@
             font-family: $fontA;
             cursor: pointer;
         }
+
+        .dropdown-row-hover {
+            &:hover {
+                background-color: darken($white,5%);
+            }
+        }
   
+        .dropdown-overflow {
+            right: 0 !important;
+        }
+        
         .dropdown-container {
             position: absolute;
             margin: 0 1px;
@@ -50,6 +61,7 @@
                 flex-direction: column;
                 box-shadow: $boxShadow;
 
+
                 .dropdown-title {
                     @extend .dropdown-row;
                     background-color: $pink;
@@ -58,24 +70,24 @@
                 }
     
                 .dropdown-suggestion {
-                    @extend .dropdown-row;
+                    @extend .dropdown-row, .dropdown-row-hover;
                 }
                 
                 .dropdown-no-suggestion {
                     @extend .dropdown-row;
                     color: darken($white, 40%);
+                    cursor: default;
                 }
                 .dropdown-other {
-                    @extend .dropdown-row;
+                    @extend .dropdown-row, .dropdown-row-hover;
                     outline: none;
                     border: none;
                     border-top: 1px solid darken($white, 20%);
                     color: $black; 
                     cursor: text;
                 }
-
                 .dropdown-ignore {
-                    @extend .dropdown-row;
+                    @extend .dropdown-row, .dropdown-row-hover;
 
                     border-top: 1px solid darken($white, 20%);
                 }
